name:                 assignment3
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Tony Hosking
maintainer:           antony.hosking@anu.edu.au
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Sudoku
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, QuickCheck
  hs-source-dirs:       .
  default-language:     Haskell2010
  ghc-options:          -O2
